--- a/src/view/Index/Recommend/index.less
+++ b/src/view/Index/Recommend/index.less
@@ -57,6 +57,10 @@
     overflow: hidden;
     margin-right: 30px;
 
+    &:last-child {
+      margin-right: 0;
+    }
+
     &-img {
       border-top-left-radius: 20px;
       border-top-right-radius: 20px;
@@ -68,7 +72,6 @@
 
     &-name {
       height: 48px;
-      // width: 100%;
       line-height: 24px;
       font-size: 24px;
       overflow: hidden;
