--- a/src/component/Nav/index.less
+++ b/src/component/Nav/index.less
@@ -28,20 +28,24 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 3 !important;
+  z-index: 3;
 }
-.alert-enter {
+
+.search-page-animation-enter {
   height: 0%;
 }
-.alert-enter-active {
+
+.search-page-animation-enter-active {
   height: calc(100vh - 100px);
 
   transition: height 1000ms;
 }
-.alert-exit {
+
+.search-page-animation-exit {
   height: calc(100vh - 100px);
 }
-.alert-exit-active {
+
+.search-page-animation-exit-active {
   height: 0;
   transition: height 1000ms;
 }
